--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   json_annotation: ^4.8.1
   dartz: ^0.10.1
   shared_preferences: ^2.2.2
+  flutter_dotenv: ^5.1.0
+  get_it: ^7.6.0
+  intl: ^0.18.1
 
 dev_dependencies:
   build_runner: ^2.4.6
